# ai-train-on-gis-data

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.claude/plans/: plan_xgboost_model.md
.github/workflows/: ci.yml
configs/: config.yaml
configs/data/: uzbekistan_s2.yaml  uzbekistan_s2_plus.yaml
configs/model/: convnext_s2.yaml  prithvi_s2.yaml  resnet50_s2.yaml  resnet50_s2_plus.yaml  tempcnn_s2.yaml
configs/trainer/: default.yaml
docs/: XGBOOST_README.md
notebooks/: 01_explore_uzbekistan_s2.ipynb
scripts/: build_dataset.py  compute_band_stats.py  detect_label_noise.py  download_data.py  eval_confusion.py  evaluate_xgboost.py  export_model.py  export_mongodb.py  export_prithvi_model.py  extract_features.py  mongo_gee_export.py  prepare_data.service  prepare_data.sh  prepare_labels.py  run_convnext_pipeline.sh  run_prithvi_pipeline.sh  run_resnet50_pipeline.sh  run_resnet50_plus_pipeline.sh  run_tempcnn_pipeline.sh  run_worldcereal.py  run_xgboost_pipeline.sh  score_chips_presto.py  stats_noncrop.py  train_xgboost.py  validate_uzcosmos_worldcereal.py
src/gis_train/: __init__.py  evaluate.py  train.py
src/gis_train/data/: __init__.py  composite.py  datamodule.py  dataset.py  download.py  indices.py  labels.py  mixup.py  phenology.py  samples.py  transforms.py  worldcereal.py
src/gis_train/models/: __init__.py  classifier.py  losses.py  prithvi_adapter.py  temporal.py
src/gis_train/utils/: __init__.py  geo.py
tests/: conftest.py  test_classifier.py  test_datamodule.py  test_dataset.py  test_geo.py  test_indices.py  test_losses.py  test_mixup.py  test_phenology.py  test_temporal_model.py  test_train_smoke.py  test_transforms.py  test_worldcereal.py
